feat(debtgo): update back-end